新增配方编辑页面,修复锻造配方加载的bug; TODO:为配方编辑页面添加返回上一页按钮