@@ -37,8 +37,7 @@ public final class RemoveRecipeCommand extends CommandNode {
             return;
         }
 
-        NamespacedKey recipeKey = new NamespacedKey(Craftorithm.instance(), args.get(0));
-        if (RecipeManager.INSTANCE.removeCraftorithmRecipe(recipeKey, true, true)) {
+        if (RecipeManager.INSTANCE.removeCraftorithmRecipe(args.getFirst(), true, true)) {
             LangUtils.sendLang(invoker, Languages.COMMAND_REMOVE_SUCCESS);
         }
         else
